Grant Type 설정 안되는 문제 등 기타 수정